# CineSage-AI

./: .gitignore  main.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
CineSage/: UICore.py  core.py
chatmodels/: UIchatbot.py  chat.py  chatbot.py  huggingface.py  localmodel.py
embeddingmodels/: embeddings.py  huggingface_embeddings.py
